Add folder for exercices

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,26 @@ typings/
 #Dev
 docs/test.html
 .metals
+
+### Metals ###
+.metals/
+.bloop/
+project/metals.sbt
+
+### SBT ###
+# Simple Build Tool
+# http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
+
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.history
+.cache
+.lib/
+
+### Scala ###
+*.class
+*.log
